@@ -1,0 +1,49 @@
+<?xml version="1.0" encoding="utf-8"?>
+<definitions name="InteropTest"
+             xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+             xmlns:SOAP-ENC="http://schemas.xmlsoap.org/soap/encoding/"
+             xmlns:tns="http://test-uri/"
+             xmlns:soap="http://schemas.xmlsoap.org/wsdl/soap/"
+             xmlns:wsdl="http://schemas.xmlsoap.org/wsdl/"
+             xmlns="http://schemas.xmlsoap.org/wsdl/"
+             targetNamespace="http://test-uri/">
+    <message name="testMessage">
+        <part name="testParam" type="xsd:string"/>
+    </message>
+    <portType name="testPortType">
+        <operation name="test">
+            <input message="testMessage"/>
+            <output message="testMessage"/>
+        </operation>
+        <operation name="test2">
+            <input message="testMessage"/>
+            <output message="testMessage"/>
+        </operation>
+    </portType>
+    <binding name="testBinding" type="testPortType">
+        <soap:binding style="rcp" transport="http://schemas.xmlsoap.org/soap/http"/>
+        <operation name="test">
+            <soap:operation soapAction="#test" style="rcp"/>
+            <input>
+                <soap:body use="encoded" namespace="http://test-uri/" encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"/>
+            </input>
+            <output>
+                <soap:body use="encoded" namespace="http://test-uri/" encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"/>
+            </output>
+        </operation>
+        <operation name="test2">
+            <soap:operation soapAction="#test2" style="rcp"/>
+            <input>
+                <soap:body use="encoded" namespace="http://test-uri/" encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"/>
+            </input>
+            <output>
+                <soap:body use="encoded" namespace="http://test-uri/" encodingStyle="http://schemas.xmlsoap.org/soap/encoding/"/>
+            </output>
+        </operation>
+    </binding>
+    <service name="testService">
+        <port name="testPort" binding="tns:testBinding">
+            <soap:address location="http://localhost:8080/server.php" />
+        </port>
+    </service>
+</definitions>
