@@ -15,4 +15,8 @@ PHP                                                                        NEWS
 - Random:
   . Moves from /dev/urandom usage to arc4random_buf on Haiku. (David Carlier)
 
+- SOAP:
+  . Fixed bug #49169 (SoapServer calls wrong function, although "SOAP action"
+    header is correct). (nielsdos)
+
 <<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>
